# PSXemu

./: .gitignore  CMakeLists.txt  README.md
EmulationGuide/: guide.tex
Emulator/: CMakeLists.txt  glad.c  main.cpp
Emulator/cpu/: cop0.h  cpu.cpp  cpu.h  instr.hpp  opcode.cpp
Emulator/devices/: cdrom_disk.cpp  cdrom_disk.hpp
Emulator/memory/: bus.cpp  bus.h
Emulator/tools/: debugger.hpp  gpu_widget.cpp  gpu_widget.hpp  widget.hpp
Emulator/utility/: log.h  types.hpp  utility.hpp
Emulator/video/: renderer.cpp  renderer.h  vram.cpp  vram.h
Emulator/video/opengl/: shader.cpp  shader.h
core/: CMakeLists.txt  main.cpp  stdafx.hpp
core/cpu/: cpu.cpp  cpu.h  instr.hpp
core/devices/: cdrom_disk.hpp  cdrom_drive.cpp
core/imgui/: imgui_memory_editor.h
core/memory/: bus.cpp  bus.h  dma.cpp  expansion2.hpp
core/tools/: cpu_widget.hpp  debugger.cpp  mem_widget.hpp
core/utility/: log.cpp  types.hpp  utility.hpp
core/video/: renderer.cpp  renderer.h
core/video/opengl/: stb_image.h  stb_image_write.h
libraries/glad/: CMakeLists.txt
libraries/glm/: CMakeLists.txt
libraries/spdlog/: CMakeLists.txt
